# courier_number_prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml
data/interim/: daily_cp_activity_dataset.csv
data/processed/: scaler.pkl  test_feature_set_scaled.npy  test_target_set.npy  total_feature_set_scaled.npy  training_feature_set_scaled.npy
data/raw/: orders_autumn_2020.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: lstm.py
notebooks/: 1.0-ms-data-exploration-features-engineering.ipynb  1.0-ms-data-exploration-features-modeling.ipynb  1.0-ms-features-modeling-multiple-days.ipynb  1.0-ms-features-modeling-next-day.ipynb
reports/: REPORT.md  Report.pptx  myslides.pptx
wolt_test_assignment/: .pre-commit-config.yaml  __init__.py  config.py  dataset.py  features.py  pipeline.py  plots.py
wolt_test_assignment/.github/workflows/: ci-cd.yml
wolt_test_assignment/modeling/: eval_models_multiple_step.py  eval_models_single_step.py  train.py  utils.py
wolt_test_assignment/tests/: test_dataset.py  test_features.py  test_train.py
