[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wolt_test_assignment"
version = "0.0.1"
description = "Predicting courier number for several days ahead."
authors = [
  { name = "Mikhail Silaev" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | \.env
  | __pycache__
)/
'''


[tool.ruff.lint.isort]
known_first_party = ["wolt_test_assignment"]
force_sort_within_sections = true
